# ai-dev-tools-zoomcamp-project

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  pages.yml
first_attempt/: .env  .env.example  README.md  docker-compose.yml  openapi.json
first_attempt/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
first_attempt/backend/app/: api.py  db.py  main.py  models.py  schemas.py
first_attempt/backend/migrations/: env.py
first_attempt/backend/migrations/versions/: b1a2c3d4e5f6_baseline.py  c1d2e3f4a5b6_refactor_categories_labels.py  d4e5f6a7b8c9_transactions_occurred_at_date.py  e5f6a7b8c9d0_create_habits.py  f6a7b8c9d0e1_add_habit_schedule.py  f7b8c9d0e1f2_create_categories_transactions.py
first_attempt/backend/scripts/: export_openapi.py
first_attempt/backend/tests/: test_categories_transactions.py  test_health.py
first_attempt/backend/tests/integration/: test_api_integration.py
first_attempt/frontend/: index.html  package-lock.json  package.json  vite.config.ts
first_attempt/frontend/src/: App.tsx  index.css  types.ts
first_attempt/frontend/src/__tests__/: App.test.tsx  AsyncFeedback.test.tsx
first_attempt/frontend/src/api/: client.ts  index.ts
first_attempt/frontend/src/components/: AsyncFeedback.tsx  CategoriesLabelsSection.tsx  HabitsSection.tsx  Header.tsx  HealthStatus.tsx  TransactionsSection.tsx  WeeklyReviewSection.tsx
first_attempt/infra/: README.md
first_attempt/mcp_server/: Dockerfile  pyproject.toml
first_attempt/mcp_server/app/: main.py
(+1 files in other folders)
