[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-tools-mcp-server"
version = "0.1.0"
description = "FastMCP server for Attempt 1."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "mcp",
]

[tool.setuptools]
packages = ["app"]
